Intermediate merge of planned stuff (NB: not all tests pass, more to come) for 0.5.0
commit 5a583d32801587335336a1293738ff6e02f112e4
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Tue Oct 1 13:52:25 2019 +0200

    At least fixes errors found by doctest although I suspects there's more to it

commit 1a8fac382b3c2f19642ffb9cd77f6560bae46516
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Tue Oct 1 13:28:45 2019 +0200

    Added my "secret" development helper techniques

commit fa50d32e0767d3684ae9fa7516d681a3ad3cb021
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Tue Oct 1 13:28:24 2019 +0200

    Expanded README

commit ccde627137e90a1c723b9f87a97742a9d56efc5e
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Mon Sep 30 21:21:58 2019 +0200

    Added missing docstring

commit 5c02b66826cda34b418f95907c5ee3e235f4990f
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Mon Sep 30 21:21:39 2019 +0200

    Split dynamic method test into own test function

commit 030bb050cf36ccce3217e241ff0c07b59d23e1f8
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Mon Sep 30 21:18:07 2019 +0200

    Won't be able to keep this Py2 compatible anyway

commit 1b0f90a9e9bcb46aa92632def63cbea4a9084cdf
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Mon Sep 30 21:17:09 2019 +0200

    Streamlined dynamic method declaration implementation

commit 63d3bffa15950d1ddf40834d501ee8fd8b82f985
Merge: e20757d ffb509b
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Mon Sep 30 21:15:23 2019 +0200

    Merge branch 'master' into develop-0.5.0

commit e20757d0dcc82f770248a03819c69af77a35f0a6
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Wed Sep 25 16:30:57 2019 +0200

    Added test for micropy.view

commit af1b77298ec4380d8af3377aa753f61a0fc3c06e
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Wed Sep 25 16:29:29 2019 +0200

    Removed more experimental code

commit 18db8001f4cb6edb8c9eb2960d41c143686f7c43
Author: Jacob Oscarson <jacob@414soft.com>
Date:   Wed Sep 25 15:50:4

--- a/README.org
+++ b/README.org
@@ -18,13 +18,42 @@ CSS selector like deep value grabbing from almost any object:
 2
 >>> dig.dig({'foo': 1, 'bar': [1,{'baz':'jox'},3]}, 'bar.1.baz')
 'jox'
+>>>
 #+END_SRC
 
-Programmatic creation of arbitrary named classes in module definition:
+Programmatic creation of arbitrary named classes in module definition,
+add methods using a decorator notation:
 
 #+BEGIN_SRC python
 >>> from micropy import lang
->>> locals()['Foo'] = lang.mkclass('Foo')
+>>> mystuff = (('Foo', 1), ('Bar', 2))
+>>> for name, num in mystuff: locals()[name] = lang.mkclass(name, **{'num': num})
 >>> Foo
 <class 'micropy.lang.Foo'>
+>>> Foo.num
+1
+>>> \
+... @Foo.classmethod
+... def myclassmethod(cls, x):
+...     return x + 1
+>>> Foo.myclassmethod(1)
+2
+>>>
+>>> \
+... @Foo.staticmethod
+... def mystaticmethod(x, y):
+...     return x + y
+>>> Foo.mystaticmethod(1, 2)
+3
+>>> \
+... @Foo.method
+... def mymethod(self, x):
+...     self.y = self.num + x
+...     return self.y
+>>> foo = Foo()
+>>> foo.mymethod(1)
+2
+>>> foo.y
+2
+>>>
 #+END_SRC
